crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__query_index_values__query_index_values_duration_single_segment_data.snap
---
source: crates/tests/re_redap_tests/src/tests/query_index_values.rs
expression: filtered_results.format_snapshot(false)
---
┌────────────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┬───────────────┬──────────────────┐
│ /my/entity:example.MyPoints:colors ┆ /my/entity:example.MyPoints:labels ┆ /my/entity:example.MyPoints:points ┆ duration      ┆ rerun_segment_id │
╞════════════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╪═══════════════╪══════════════════╡
│ [1]                                ┆ [simple]                           ┆ [{x: 1.0, y: 1.0}]                 ┆ PT0.00000102S ┆ my_segment_id1   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [3]                                ┆ [simple]                           ┆ [{x: 3.0, y: 3.0}]                 ┆ PT0.00000104S ┆ my_segment_id1   │
└────────────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┴───────────────┴──────────────────┘
